--- a/styles.css
+++ b/styles.css
@@ -143,6 +143,8 @@ nav a:hover {
   border-bottom: 10px;
   font-weight: 500;
   width: 80%;
+  height: 30px;
+  overflow: auto;
   margin: 0 auto;
   color: #fff;
 }
@@ -199,6 +201,18 @@ nav a:hover {
   color: white;
 }
 
+.member a {
+  color: white;
+  text-decoration: none;
+  font-weight: bold;
+  transition: text-shadow 0.3s ease;
+}
+
+.member a:hover {
+  text-decoration: none;
+  text-shadow: 0px 0px 5px #ffffff;
+}
+
 #dropdown {
   color: white;
   background-color: #528651;
@@ -210,27 +224,6 @@ nav a:hover {
   border-bottom-right-radius: 8px;
   font-weight: bold;
   text-shadow: 0px 0px 5px transparent;
-  transition: height 400ms ease; 
-  overflow: hidden;
-}
-
-#dropdown:hover {
-  height: 200px;
-}
-
-.hidden-container {
-  padding-left: 50px;
-  padding-right: 50px;
-}
-
-.hidden-container ul {
-  list-style: inside;
-}
-
-.hidden-container li {
-  margin-top: 10px;
-  border-bottom: 1px solid #79ac78;
-  padding: 5px;
 }
 
 @media only screen and (min-width: 768px) {
