--- a/indiv-projs/styles.css
+++ b/indiv-projs/styles.css
@@ -20,6 +20,15 @@ header {
     padding: 15px;
 }
 
+header h2 {
+    font-size: 23px;
+}
+
+header a {
+    text-decoration: none;
+    color: white;
+}
+
 main {
     margin: 50px;
     display: flex;
